<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginPage" tools:ignore="LabelFor">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gym"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView" android:layout_marginTop="72dp" android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"
            android:fontFamily="monospace"/>
    <EditText
            android:id="@+id/userLogin"
            android:layout_height="48dp"
            android:layout_width="364dp"
            android:inputType="textPersonName"
            android:hint="@string/Usuario"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="116dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:importantForAutofill="no" style="@style/Widget.AppCompat.AutoCompleteTextView"
    />

    <EditText
            android:id="@+id/userPass"
            android:layout_height="48dp"
            android:layout_width="364dp"
            android:inputType="textPassword"
            android:hint="@string/Password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userLogin" app:layout_constraintVertical_bias="0.074"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no" style="@style/Widget.AppCompat.EditText"
            tools:text="@tools:sample/cities"/>
    <Button
            android:id="@+id/botonLogin"
            app:layout_constraintTop_toBottomOf="@+id/userPass"
            android:text="@string/empezar"
            android:layout_width="148dp"
            android:layout_height="68dp"
            android:layout_marginTop="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="sans-serif" android:typeface="serif" android:textSize="20sp" android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>